# pllp2

lab1/: CMakeLists.txt  Matrix.h  README.md  main.cpp
lab2/: README.md
lab2/lab2/: check.py  main.cpp  result.xlsx
lab2/lab2/lab2/: matrix_math.cpp
lab2/lab2/lab2/lab2/: matrix_math.h
lab3/: README.md  main.cpp  matrix_math.cpp  matrix_math.h  result.numbers
lab4/: 4res.numbers  CMakeLists.txt  README.md  main.cpp  main_cuda.cpp  matrix_math.cpp  matrix_math_cuda.cu  matrix_math_cuda.h
lab5/: 5res.numbers  README.md
